# py_sqltoy

./: .gitignore  LICENCE  README.rst  pyproject.toml
